fix: Remove unnecessary margin-left from carousel container for better alignment

--- a/src/layouts/center/center.css
+++ b/src/layouts/center/center.css
@@ -31,7 +31,6 @@
 .carousel-container-center {
   width: 100vw;
   min-width: 1280px;
-  margin-left: calc(-50vw + 50%);
   overflow: hidden;
   position: relative;
 }
